--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -170,6 +170,7 @@
     --topbar-icon-size: 20px;
   }
 
+  /* Not enough space to adequately show the relative savings bars. */
   .lh-sparkline {
     display: none;
   }
